tests/cases/scc/error/0021-void.c
//!necc-dbg @ -as

int
main(void)
{
	void f(void);

	return (int) f();
}
